--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,13 +10,15 @@
      "output_type": "stream",
      "text": [
       "Namaste Dunia!!\n",
-      "Arjita loves you\n"
+      "Arjita loves you\n",
+      "regression analysis\n"
      ]
     }
    ],
    "source": [
     "print(\"Namaste Dunia!!\")\n",
-    "print(\"Arjita loves you\")"
+    "print(\"Arjita loves you\")\n",
+    "print(\"regression analysis\")"
    ]
   }
  ],
