--- a/main.ipynb
+++ b/main.ipynb
@@ -9,15 +9,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Namaste Dunia!!\n",
-      "regression analysis\n"
+      "[1, 2, 3, 4]\n"
      ]
     }
    ],
    "source": [
-    "print(\"Namaste Dunia!!\")\n",
-    "print(\"regression analysis\")"
+    "list = [1,2,3,4]\n",
+    "print(list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list.append(5)\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -36,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
