--- a/main.ipynb
+++ b/main.ipynb
@@ -352,103 +352,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "String Methods"
+    "If else Conditions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26\n",
-      "!!!Harry!! !!!!!!!!! Harry\n",
-      "!!!HARRY!! !!!!!!!!! HARRY\n",
-      "!!!harry!! !!!!!!!!! harry\n",
-      "!!!Harry!! !!!!!!!!! Harry\n",
-      "!!!John!! !!!!!!!!! John\n",
-      "['!!!Harry!!', '!!!!!!!!!', 'Harry']\n",
-      "Introduction to js\n",
-      "25\n",
-      "50\n",
-      "2\n",
-      "True\n",
-      "True\n",
-      "-1\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "False\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "False\n",
-      "True\n",
-      "pYTHON IS A iNTERPRETED lANGUAGE\n",
-      "His Name Is Dan. Dan Is An Honest Man.\n"
+      "Your age is: 19\n"
      ]
     }
    ],
    "source": [
-    "# Strings are immutable\n",
-    "a = \"!!!Harry!! !!!!!!!!! Harry\"\n",
-    "print(len(a))\n",
-    "print(a)\n",
-    "print(a.upper())\n",
-    "print(a.lower())\n",
-    "print(a.rstrip(\"!\"))\n",
-    "print(a.replace(\"Harry\", \"John\"))\n",
-    "print(a.split(\" \"))\n",
-    "blogHeading = \"introduction tO jS\"\n",
-    "print(blogHeading.capitalize())\n",
-    "\n",
-    "str1 = \"Welcome to the Console!!!\"\n",
-    "print(len(str1))\n",
-    "print(len(str1.center(50)))\n",
-    "print(a.count(\"Harry\"))\n",
-    "\n",
-    "str1 = \"Welcome to the Console !!!\"\n",
-    "print(str1.endswith(\"!!!\"))\n",
-    "\n",
-    "str1 = \"Welcome to the Console !!!\"\n",
-    "print(str1.endswith(\"to\", 4, 10))\n",
-    "\n",
-    "str1 = \"He's name is Dan. He is an honest man.\"\n",
-    "print(str1.find(\"ishh\"))\n",
-    "# print(str1.index(\"ishh\"))\n",
-    "\n",
-    "str1 = \"WelcomeToTheConsole\"\n",
-    "print(str1.isalnum())\n",
-    "str1 = \"Welcome\"\n",
-    "print(str1.isalpha())\n",
-    "\n",
-    "str1 = \"hello world\"\n",
-    "print(str1.islower())\n",
-    "\n",
-    "str1 = \"We wish you a Merry Christmas\\n\"\n",
-    "print(str1.isprintable())\n",
-    "str1 = \"         \"       #using Spacebar\n",
-    "print(str1.isspace())\n",
-    "str2 = \"  \"       #using Tab\n",
-    "print(str2.isspace())\n",
-    "\n",
-    "str1 = \"World Health Organization\" \n",
-    "print(str1.istitle())\n",
-    "\n",
-    "str2 = \"To kill a Mocking bird\"\n",
-    "print(str2.istitle())\n",
-    "\n",
-    "str1 = \"Python is a Interpreted Language\" \n",
-    "print(str1.startswith(\"Python\"))\n",
-    "\n",
-    "str1 = \"Python is a Interpreted Language\" \n",
-    "print(str1.swapcase())\n",
-    "\n",
-    "str1 = \"His name is Dan. Dan is an honest man.\"\n",
-    "print(str1.title())"
+    "a = int(input(\"Enter your age: \"))\n",
+    "print(\"Your age is:\", a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Conditional operators \n",
+    "# >, <, >=, <=, ==, !=\n",
+    "print(a>18)\n",
+    "print(a<=18)\n",
+    "print(a==18)\n",
+    "print(a!=18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can drive\n",
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "if(a>18):\n",
+    "  print(\"You can drive\")\n",
+    "  print(\"Yes\")\n",
+    "else:\n",
+    "  print(\"You cannot drive\")\n",
+    "  print(\"No\")\n",
+    "  print(\"Yay!\")"
    ]
   },
   {
