--- a/main.ipynb
+++ b/main.ipynb
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Strings in Python"
+    "## Strings in Python"
    ]
   },
   {
@@ -312,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Strings Slicing"
+    "## Strings Slicing"
    ]
   },
   {
@@ -352,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If else Conditions"
+    "## If else Conditions"
    ]
   },
   {
@@ -423,40 +423,86 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4]\n"
-     ]
-    }
-   ],
    "source": [
-    "list = [1,2,3,4]\n",
-    "print(list)"
+    "## Match Case\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5]\n"
+      "x is zero\n"
      ]
     }
    ],
    "source": [
-    "list.append(5)\n",
-    "print(list)"
+    "\n",
+    "x = int(input(\"Enter the value of x: \"))\n",
+    "# x is the variable to match\n",
+    "match x:\n",
+    "    # if x is 0\n",
+    "    case 0:\n",
+    "        print(\"x is zero\")\n",
+    "    # case with if-condition\n",
+    "    case 4:\n",
+    "        print(\"case is 4\")\n",
+    "\n",
+    "    case _ if x!=90:\n",
+    "        print(x, \"is not 90\")\n",
+    "    case _ if x!=80:\n",
+    "        print(x, \"is not 80\")\n",
+    "    case _:\n",
+    "        print(x)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### break statement\n",
+    "The break statement enables a program to skip over a part of the code. A break statement terminates the very loop it lies within."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Mississippi\n",
+      "2 Mississippi\n",
+      "3 Mississippi\n",
+      "4 Mississippi\n",
+      "5 Mississippi\n",
+      "6 Mississippi\n",
+      "7 Thank you\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,101,1):\n",
+    "    print(i ,end=\" \")\n",
+    "    if(i==7):\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Mississippi\")\n",
+    "print(\"Thank you\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
