--- a/LIsts-Sets-Tuples-Dictionaries/Tuples.ipynb
+++ b/LIsts-Sets-Tuples-Dictionaries/Tuples.ipynb
@@ -112,6 +112,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "String formatting in python\n",
+    "String formatting can be done in python using the format method.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For only 49.00 dollars!\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt = \"For only {price:.2f} dollars!\"\n",
+    "print(txt.format(price = 49))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "f-strings in python\n",
+    "It is a new string formatting mechanism introduced by the PEP 498. It is also known as Literal String Interpolation or more commonly as F-strings (f character preceding the string literal). The primary focus of this mechanism is to make the interpolation easier.\n",
+    "\n",
+    "When we prefix the string with the letter 'f', the string becomes the f-string itself. The f-string can be formatted in much same as the str.format() method. The f-string offers a convenient way to embed Python expression inside string literals for formatting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GeeksforGeeks is a portal for Geeks.\n",
+      "Hello, My name is Tushar and I'm 23 years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = 'Geeks'  \n",
+    "print(f\"{val}for{val} is a portal for {val}.\")  \n",
+    "name = 'Tushar'  \n",
+    "age = 23  \n",
+    "print(f\"Hello, My name is {name} and I'm {age} years old.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{2 * 30}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
