--- a/LIsts-Sets-Tuples-Dictionaries/Dictionaries.ipynb
+++ b/LIsts-Sets-Tuples-Dictionaries/Dictionaries.ipynb
@@ -140,7 +140,181 @@
    "metadata": {},
    "source": [
     "# Dictionary Methods\n",
-    "\n"
+    "\n",
+    "Dictionary uses several built-in methods for manipulation.They are listed below\n",
+    "\n",
+    "1. update()\n",
+    "The update() method updates the value of the key provided to it if the item already exists in the dictionary, else it creates a new key-value pair."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Karan', 'age': 19, 'eligible': True}\n",
+      "{'name': 'Karan', 'age': 20, 'eligible': True, 'DOB': 2001}\n"
+     ]
+    }
+   ],
+   "source": [
+    "info = {'name':'Karan', 'age':19, 'eligible':True}\n",
+    "print(info)\n",
+    "info.update({'age':20})\n",
+    "info.update({'DOB':2001})\n",
+    "print(info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Removing items from dictionary:\n",
+    "There are a few methods that we can use to remove items from dictionary.\n",
+    "\n",
+    "clear():\n",
+    "The clear() method removes all the items from the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "info = {'name':'Karan', 'age':19, 'eligible':True}\n",
+    "info.clear()\n",
+    "print(info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pop():\n",
+    "The pop() method removes the key-value pair whose key is passed as a parameter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Karan', 'age': 19}\n"
+     ]
+    }
+   ],
+   "source": [
+    "info = {'name':'Karan', 'age':19, 'eligible':True}\n",
+    "info.pop('eligible')\n",
+    "print(info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "popitem():\n",
+    "The popitem() method removes the last key-value pair from the dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Karan', 'age': 19, 'eligible': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "info = {'name':'Karan', 'age':19, 'eligible':True, 'DOB':2003}\n",
+    "info.popitem()\n",
+    "print(info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "del:\n",
+    "we can also use the del keyword to remove a dictionary item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Karan', 'eligible': True, 'DOB': 2003}\n"
+     ]
+    }
+   ],
+   "source": [
+    "info = {'name':'Karan', 'age':19, 'eligible':True, 'DOB':2003}\n",
+    "del info['age']\n",
+    "print(info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If key is not provided, then the del keyword will delete the dictionary entirely."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'info' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m info \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mKaran\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;241m19\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124meligible\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDOB\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;241m2003\u001b[39m}\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m info\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43minfo\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'info' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "info = {'name':'Karan', 'age':19, 'eligible':True, 'DOB':2003}\n",
+    "del info\n",
+    "print(info) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You would be wondering why NameError? Because the `del` deletes the info dictionary totally from the memory\n"
    ]
   },
   {
